--- a/index.html
+++ b/index.html
@@ -1,86 +1,190 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Demon List con Jugadores</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #1f1f1f, #111827);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
-      color: white;
-    }
-    @keyframes gradient {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-    .card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 15px #60a5fa;
-    }
-    .card {
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Demon List - Estilo Neón</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+<style>
+  /* Fuente Montserrat para un estilo moderno */
+  body {
+    margin: 0;
+    background: linear-gradient(135deg, #0a0f1a, #121f3c);
+    color: #eee;
+    font-family: 'Montserrat', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+    color: #3db4ff;
+    text-shadow: 0 0 8px #3db4ff, 0 0 20px #1c9fff;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  .players-list {
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 2rem;
+  }
+
+  .player {
+    background: rgba(25, 45, 80, 0.4);
+    border: 1px solid #3db4ff;
+    border-radius: 12px;
+    padding: 12px 20px;
+    margin-bottom: 10px;
+    color: #cce6ff;
+    font-weight: 600;
+    box-shadow: 0 0 10px #1c9fff88;
+    transition: background 0.3s ease;
+  }
+
+  .player:hover {
+    background: rgba(25, 45, 80, 0.7);
+    box-shadow: 0 0 15px #3db4ff;
+  }
+
+  a.button {
+    display: inline-block;
+    padding: 12px 28px;
+    border: 2px solid #3db4ff;
+    border-radius: 30px;
+    color: #3db4ff;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.1rem;
+    transition: all 0.3s ease;
+    box-shadow: 0 0 10px #3db4ff55;
+  }
+
+  a.button:hover {
+    background: #3db4ff;
+    color: #0a0f1a;
+    box-shadow: 0 0 20px #3db4ff;
+  }
+
+  .levels {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+    gap: 1.5rem;
+    width: 100%;
+    max-width: 900px;
+  }
+
+  .card {
+    background: rgba(20, 35, 65, 0.6);
+    border-radius: 16px;
+    box-shadow: 0 0 15px #1c9fff55;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 30px #3db4ffcc;
+  }
+
+  .card img {
+    width: 100%;
+    display: block;
+  }
+
+  .card-content {
+    padding: 1rem 1.2rem;
+  }
+
+  .card-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #3db4ff;
+    margin: 0 0 0.3rem 0;
+    text-shadow: 0 0 8px #3db4ff;
+  }
+
+  .card-subtitle {
+    font-size: 0.9rem;
+    color: #a9cfffcc;
+    margin-bottom: 0.8rem;
+  }
+
+  .card a {
+    display: inline-block;
+    padding: 8px 16px;
+    background: transparent;
+    border: 1.5px solid #3db4ff;
+    border-radius: 9999px;
+    color: #3db4ff;
+    text-decoration: none;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    box-shadow: 0 0 8px #3db4ff55;
+  }
+
+  .card a:hover {
+    background: #3db4ff;
+    color: #0a0f1a;
+    box-shadow: 0 0 20px #3db4ff;
+  }
+</style>
 </head>
 <body>
-  <div class="container mx-auto px-4 py-10">
-    <h1 class="text-5xl font-bold text-center text-blue-400 mb-12 animate-pulse">🔥 Demon List - Top 5 con Puntos</h1>
 
-    <h2 class="text-3xl font-semibold mb-6">Jugadores y Puntajes</h2>
-    <div id="players-list" class="mb-12 space-y-3 text-xl"></div>
+  <h1>🔥 Demon List - Top 5 con Puntos</h1>
 
-    <!-- Botón para abrir formulario de solicitud -->
-    <div class="text-center my-8">
-      <a href="https://docs.google.com/forms/d/e/FORM_ID/viewform" target="_blank" 
-         class="inline-block bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg font-semibold transition duration-300">
-        Solicitar añadir jugador
-      </a>
+  <div class="players-list" id="players-list">
+    <!-- Aquí se cargarán los jugadores -->
+  </div>
+
+  <div class="text-center" style="margin-bottom: 2rem;">
+    <a href="https://docs.google.com/forms/d/e/FORM_ID/viewform" target="_blank" class="button">
+      Solicitar añadir jugador
+    </a>
+  </div>
+
+  <div class="levels">
+    <div class="card">
+      <img src="https://img.youtube.com/vi/3gT1I9GHt_4/hqdefault.jpg" alt="Tartarus" />
+      <div class="card-content">
+        <h2 class="card-title">#1 Tartarus</h2>
+        <p class="card-subtitle">por Riot</p>
+        <a href="https://www.youtube.com/watch?v=3gT1I9GHt_4" target="_blank">🎬 Ver video</a>
+      </div>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <!-- Niveles con miniaturas y video -->
-      <div class="bg-gray-800 rounded-2xl shadow-xl overflow-hidden card p-4 flex flex-col">
-        <img src="https://img.youtube.com/vi/3gT1I9GHt_4/hqdefault.jpg" alt="Tartarus" class="w-full h-48 object-cover rounded-lg mb-4" />
-        <h2 class="text-2xl font-bold text-blue-300">#1 Tartarus</h2>
-        <p class="text-sm text-gray-400 mb-2">por Riot</p>
-        <a href="https://www.youtube.com/watch?v=3gT1I9GHt_4" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl mb-4 transition-all duration-300">
-          🎬 Ver video
-        </a>
-      </div>
-
-      <div class="bg-gray-800 rounded-2xl shadow-xl overflow-hidden card p-4 flex flex-col">
-        <img src="https://img.youtube.com/vi/oEfP1Zq6W5k/hqdefault.jpg" alt="Acheron" class="w-full h-48 object-cover rounded-lg mb-4" />
-        <h2 class="text-2xl font-bold text-blue-300">#2 Acheron</h2>
-        <p class="text-sm text-gray-400 mb-2">por Ryamu</p>
-        <a href="https://www.youtube.com/watch?v=oEfP1Zq6W5k" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl mb-4 transition-all duration-300">
-          🎬 Ver video
-        </a>
+    <div class="card">
+      <img src="https://img.youtube.com/vi/oEfP1Zq6W5k/hqdefault.jpg" alt="Acheron" />
+      <div class="card-content">
+        <h2 class="card-title">#2 Acheron</h2>
+        <p class="card-subtitle">por Ryamu</p>
+        <a href="https://www.youtube.com/watch?v=oEfP1Zq6W5k" target="_blank">🎬 Ver video</a>
       </div>
     </div>
   </div>
 
   <script>
     fetch('players.json')
-      .then(response => response.json())
+      .then(r => r.json())
       .then(players => {
         const container = document.getElementById('players-list');
-        players.forEach(player => {
+        players.forEach(p => {
           const div = document.createElement('div');
-          div.textContent = `${player.name}: ${player.score} puntos`;
+          div.className = 'player';
+          div.textContent = `${p.name}: ${p.score} puntos`;
           container.appendChild(div);
         });
       })
-      .catch(err => {
+      .catch(e => {
         const container = document.getElementById('players-list');
-        container.textContent = "Error cargando la lista de jugadores.";
-        console.error(err);
+        container.textContent = 'Error cargando jugadores.';
+        console.error(e);
       });
   </script>
+
 </body>
 </html>
