--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Demon List - Estilo Neón</title>
+<title>Demon List - Blanco y Negro</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 <style>
-  /* Fuente Montserrat para un estilo moderno */
   body {
     margin: 0;
-    background: linear-gradient(135deg, #0a0f1a, #121f3c);
-    color: #eee;
+    background: linear-gradient(135deg, #000000, #1a1a1a);
+    color: #f0f0f0;
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
     display: flex;
@@ -21,8 +20,8 @@
 
   h1 {
     font-size: 3rem;
-    color: #3db4ff;
-    text-shadow: 0 0 8px #3db4ff, 0 0 20px #1c9fff;
+    color: #ffffff;
+    text-shadow: 0 0 6px #ffffff88, 0 0 12px #ffffff55;
     margin-bottom: 1.5rem;
     text-align: center;
   }
@@ -34,39 +33,39 @@
   }
 
   .player {
-    background: rgba(25, 45, 80, 0.4);
-    border: 1px solid #3db4ff;
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid #ffffff66;
     border-radius: 12px;
     padding: 12px 20px;
     margin-bottom: 10px;
-    color: #cce6ff;
+    color: #f0f0f0;
     font-weight: 600;
-    box-shadow: 0 0 10px #1c9fff88;
+    box-shadow: 0 0 8px #ffffff33;
     transition: background 0.3s ease;
   }
 
   .player:hover {
-    background: rgba(25, 45, 80, 0.7);
-    box-shadow: 0 0 15px #3db4ff;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 0 12px #ffffff88;
   }
 
   a.button {
     display: inline-block;
     padding: 12px 28px;
-    border: 2px solid #3db4ff;
+    border: 2px solid #ffffffcc;
     border-radius: 30px;
-    color: #3db4ff;
+    color: #ffffffcc;
     text-decoration: none;
     font-weight: 700;
     font-size: 1.1rem;
     transition: all 0.3s ease;
-    box-shadow: 0 0 10px #3db4ff55;
+    box-shadow: 0 0 10px #ffffff55;
   }
 
   a.button:hover {
-    background: #3db4ff;
-    color: #0a0f1a;
-    box-shadow: 0 0 20px #3db4ff;
+    background: #ffffffcc;
+    color: #000000;
+    box-shadow: 0 0 20px #ffffffcc;
   }
 
   .levels {
@@ -78,16 +77,16 @@
   }
 
   .card {
-    background: rgba(20, 35, 65, 0.6);
+    background: rgba(255, 255, 255, 0.1);
     border-radius: 16px;
-    box-shadow: 0 0 15px #1c9fff55;
+    box-shadow: 0 0 15px #ffffff44;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
   .card:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 30px #3db4ffcc;
+    box-shadow: 0 0 25px #ffffffbb;
   }
 
   .card img {
@@ -102,14 +101,14 @@
   .card-title {
     font-size: 1.5rem;
     font-weight: 700;
-    color: #3db4ff;
+    color: #ffffff;
     margin: 0 0 0.3rem 0;
-    text-shadow: 0 0 8px #3db4ff;
+    text-shadow: 0 0 6px #ffffffcc;
   }
 
   .card-subtitle {
     font-size: 0.9rem;
-    color: #a9cfffcc;
+    color: #ccccccaa;
     margin-bottom: 0.8rem;
   }
 
@@ -117,19 +116,19 @@
     display: inline-block;
     padding: 8px 16px;
     background: transparent;
-    border: 1.5px solid #3db4ff;
+    border: 1.5px solid #ffffffcc;
     border-radius: 9999px;
-    color: #3db4ff;
+    color: #ffffffcc;
     text-decoration: none;
     font-weight: 600;
     transition: all 0.3s ease;
-    box-shadow: 0 0 8px #3db4ff55;
+    box-shadow: 0 0 8px #ffffff55;
   }
 
   .card a:hover {
-    background: #3db4ff;
-    color: #0a0f1a;
-    box-shadow: 0 0 20px #3db4ff;
+    background: #ffffffcc;
+    color: #000000;
+    box-shadow: 0 0 20px #ffffffcc;
   }
 </style>
 </head>
